# depthai-core

cmake/Depthai/: DepthaiDeviceSideConfig.cmake
cmake/Hunter/: config.cmake
example/: main.cpp
examples/: CMakeLists.txt
examples/src/: 04_rgb_encoding.cpp
host/ros/: README.md
host/ros/depthai/: CMakeLists.txt  package.xml
host/ros/depthai/launch/: depthai.launch
host/ros/depthai/msg/: CameraInfo.msg  MetaOut.msg
host/ros/depthai/src/: depthai_node.cpp  depthai_node_base.cpp  depthai_node_base.hpp  tmp.txt
host/ros/lib/: CMakeLists.txt  depthai.pc.in
host/ros/lib/include/: depthai.hpp
host/ros/lib/src/: depthai.cpp
host/ros/lib/test/: CMakeLists.txt  test.cpp
include/depthai/: device.hpp
include/depthai/pipeline/node/: StereoDepth.hpp
src/: Device.cpp  DeviceBootloader.cpp  device.cpp
src/device/: CalibrationHandler.cpp
src/pipeline/node/: StereoDepth.cpp
src/xlink/: XLinkConnection.cpp
